--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,8 +17,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-        pip install -r requirements.txt
+        pip install pylint build
+        python -m build
+        pip install ./dist/*.whl
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
